[gd_scene load_steps=15 format=2]

[ext_resource path="res://game_scene.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://TranscendsGames.tres" type="DynamicFont" id=4]
[ext_resource path="res://TranscendsGames.otf" type="DynamicFontData" id=5]
[ext_resource path="res://shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://laser18B.wav" type="AudioStream" id=7]
[ext_resource path="res://shoot2.wav" type="AudioStream" id=8]
[ext_resource path="res://explosion8.wav" type="AudioStream" id=9]
[ext_resource path="res://goal.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 100, 530 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 650, 80 )

[sub_resource type="DynamicFont" id=3]

size = 42
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=4]

resource_name = "shake"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 648, 370 ), Vector2( 631, 355 ), Vector2( 655, 380 ), Vector2( 634, 347 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.0, 3.7, -3.7, 2.8, 0.0 ]
}

[node name="scene_root" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 220.0, 500.0 ],
"_edit_vertical_guides_": [ 100.0, 160.0, 1180.0, 1120.0 ]
}

[node name="balls" type="Node2D" parent="." index="0"]

[node name="projectiles" type="Node2D" parent="." index="1"]

[node name="walls" type="StaticBody2D" parent="." index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.9
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls" index="0"]

position = Vector2( -100, 360 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls" index="1"]

position = Vector2( 1380, 360 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls" index="2"]

position = Vector2( 640, -80 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls" index="3"]

position = Vector2( 640, 800 )
shape = SubResource( 2 )

[node name="player1" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 130, 360 )
collision_mask = 3
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="player2" parent="." index="4" instance=ExtResource( 2 )]

position = Vector2( 1150, 360 )
rotation = 3.14159
collision_mask = 3
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]
move_forward = "player2_forward"
move_back = "player2_back"
move_left = "player2_left"
move_right = "player2_right"
color = "2629df"

[node name="points1" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_right = 45.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="points2" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1234.0
margin_right = 1274.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="debug" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 23.0
margin_right = 46.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 10.0
margin_right = 660.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 180.0
one_shot = true
autostart = true

[node name="winner" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 495.0
margin_top = 221.0
margin_right = 753.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="shoot_sound" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 6 )
volume_db = -3.0
autoplay = false
mix_target = 0
bus = "Bus1"

[node name="shoot_sound2" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 6 )
volume_db = -3.0
autoplay = false
mix_target = 0
bus = "Bus2"

[node name="shoot_sound3" type="AudioStreamPlayer2D" parent="." index="13"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Bus3"
area_mask = 1

[node name="shoot_sound4" type="AudioStreamPlayer" parent="." index="14"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="explosion_sound" type="AudioStreamPlayer" parent="." index="15"]

stream = ExtResource( 9 )
volume_db = -9.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="goal_sound" type="AudioStreamPlayer" parent="." index="16"]

stream = ExtResource( 10 )
volume_db = -9.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="17"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/shake = SubResource( 4 )
blend_times = [  ]

[node name="Camera2D" type="Camera2D" parent="." index="18"]

offset = Vector2( 640, 360 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Offset", "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


